<resources>
    <string name="login_title">"欢迎～\n使用嘟一家代驾"</string>
    <string name="login_input_mobile">"请输入手机号"</string>
    <string name="login_input_verification_code_ed">"请输入验证码"</string>
    <string name="login_get_verification_code">"获取验证码"</string>
    <string name="login_login">"登 录"</string>
    <string name="login_check_text">"同意以下内容并授权给嘟一家平台完成注册/登录"</string>
    <string name="login_serve">"《服务协议》"</string>
    <string name="login_intimacy">"《隐私政策》"</string>
    <string name="login_copyright_notice">"《版权声明》"</string>
    <string name="login_input_mobile_hint">"请输入正确的手机号"</string>
    <string name="login_get_code_hint">"请先获取验证码"</string>
    <string name="login_agree_agreement_hint">"请仔细阅读并同意《服务协议》、《隐私政策》、《版权声明》后操作"</string>
    <string name="home_car_technician_register">"技师注册"</string>
    <string name="home_car_store_register">"店铺注册"</string>
    <string name="home_car_not_register">"还没有注册？"</string>
    <string name="login_splash_skip">"跳 过"</string>
    <string name="login_privacy_policy_title">版权声明</string>
    <string name="login_intimacy_title">"嘟一家 个人信息保护及隐私政策"</string>
    <string name="login_agreement_title">嘟一家商户服务协议</string>
    <string name="login_privacy_policy_content">"嘟一家平台由上海嘟灵科技服务有限公司开发运营。本平台是一个分享汽车技术知识的平台，平台充分尊重每一位人员的知识贡献和智慧分享，尊重合法权利人的知识产权和相关权益。为了保证本平台的正常运营、避免不必要的风险、不断地提高我们的服务，因此，我们强烈建议您务必阅读以下条款：

1.您只能上传您本人的合法作品（包括但不限于维修案例）到本平台。上传作品时，您必须确认本人是该作品的合法权利人。如您上传作品到本平台，本平台默认上传的作品是您本人的原创或合法作品，您是合法著作权人。如上传非您本人作品而由此导致的违法行为，与本平台无关，所有法律责任由您本人承担。

2.您确认上传到平台的作品，不得侵犯他人隐私、各种权益，不得透露他人信息。

3.您上传本人的合法作品到本平台，视为您同意转让作品的所有财产权给本平台，本平台对您的作品拥有完整的使用权、处分权、收益权，包括但不限于对您的作品进行复制、转载、传播、改编、表演、翻录、翻拍、网络传输等。您上传本人的合法作品到平台，视为您同意与本平台按照一定比例共同分享对您作品进行处分而产生的收益。

4. 本平台所有发布的作品，包括但不限于文字、图片、视频、声音、程序等都享有著作权保护，未经许可不得转载、复制、翻拍、改编、传播、网络传输、镜像等。如有发现，本平台保留追究法律责任的权利。访问者可将本平台提供的内容或服务用于个人学习、研究或欣赏，以及其他非商业性或非盈利性用途，但同时应遵守著作权法及其他相关法律的规定，不得侵犯本平台及相关权利人的合法权利。

5.本平台尊重每一位权利人的合法权益，如有任何侵权行为，请速与本平台联系（电话400-836-6886 或者customerservice@dlvehicle.com），平台会在48小时以内迅速核实并依法处理。

                                            上海嘟灵科技服务有限公司
                                            2021年2月8日"
    </string>
</resources>