<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"
        android:text="@string/login_title"
        android:textStyle="bold"
        android:textColor="#FF090909"
        android:lineSpacingExtra="6dp"
        android:textSize="26dp"
        android:id="@+id/login_title"/>-->
    <ImageView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/linear_mobile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_btn_shape"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/login_title">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="+86"
            android:textColor="#FF090909"
            android:textSize="16dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="9dp"
            android:layout_marginBottom="9dp"
            android:background="#FFE5ECF2" />

        <EditText
            android:id="@+id/login_mobile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:background="@null"
            android:hint="@string/login_input_mobile"
            android:inputType="phone"
            android:maxLength="11"
            android:paddingStart="15dp"
            android:textColor="#FF000000"
            android:textColorHint="#FF999999" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_verification_linear"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linear_mobile">

        <EditText
            android:id="@+id/login_verification_code_et"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="5"
            android:background="@drawable/login_btn_shape"
            android:hint="@string/login_input_verification_code_ed"
            android:inputType="number"
            android:maxLength="6"
            android:paddingStart="15dp"
            android:textColor="#FF000000"
            android:textColorHint="#FF999999" />

        <TextView
            android:id="@+id/login_get_verification_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login_get_verification_code"
            android:textColor="#FF090909"
            android:textSize="16dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/login_btn_selector"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:text="@string/login_login"
        android:textColor="#FFFFFFFF"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@+id/login_verification_linear" />

    <CheckBox
        android:id="@+id/login_check_box"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="14dp"
        android:button="@drawable/login_check_style"
        android:paddingStart="6dp"
        android:paddingLeft="6dp"
        android:text="@string/login_check_text"
        android:textColor="#FF999999"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_login" />

    <TextView
        android:id="@+id/login_serve"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="6dp"
        android:text="@string/login_serve"
        android:textColor="#FF1684E3"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/login_intimacy"
        app:layout_constraintTop_toBottomOf="@+id/login_check_box"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/login_intimacy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:padding="6dp"
        android:text="@string/login_intimacy"
        android:textColor="#FF1684E3"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/login_serve"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_serve" />


    <TextView
        android:id="@+id/login_copyright_notice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:padding="6dp"
        android:text="@string/login_copyright_notice"
        android:textColor="#FF1684E3"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_serve"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/home_car_not_register"
        android:textColor="#FF666666"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/home_car_technician_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/home_car_technician_register"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/login_btn_register_shape"
        android:gravity="center"
        android:text="@string/home_car_technician_register"
        android:textColor="#FF212121"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/home_car_store_register"
        android:layout_width="142dp"
        android:layout_height="50dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/login_btn_register_shape"
        android:gravity="center"
        android:text="@string/home_car_store_register"
        android:textColor="#FF212121"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/home_car_technician_register" />

</androidx.constraintlayout.widget.ConstraintLayout>